# ilo2-viewer

./: .gitignore  README.md  config_template.ini  pyproject.toml
src/ilo2_viewer/: __main__.py  auth.py  connection.py  display.py  dvc.py  input_handler.py  locale_translator.py  main_window.py  mouse_sync.py  power.py  rc4.py  ssl_config.py  web_server.py
src/ilo2_viewer/static/: index.html
